[package]
name = "servic_b"
version = "1.0.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.17"
cfg-if = "0.1.2"
mail-parser = {version = "0.8.2", features = ["serde_support", "full_encoding"]}
serde_json = "1.0.96"

[profile.release]
lto = true
strip = true
codegen-units = 1
